# futuraps_perception

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/canopy_density/: canopy_density.yaml
config/parameter_extractor/: parameter_extractor.yaml
config/pointcloud_filters/: crop_box_filter.yaml  local_map_filter.yaml
config/rtabmap/: rtabmap_slam.yaml  rtabmap_vo.yaml
config/visualization/: visualization.yaml
include/futuraps_perception/: closest_grid.hpp  crop_box_filter.hpp  grid_spec.hpp  local_map_filter.hpp
launch/: perception_bringup.launch.py
launch/includes/: parameter_extractor.launch.py  point_cloud_filter.launch.py  rtabmap_local.launch.py  visualization.launch.py
msg/: CanopyDensityGrid.msg
rviz/: futuraps.rviz
src/canopy_density/: canopy_density_map_colorizer_node.cpp  canopy_density_node.cpp  canopy_density_visualizer.cpp
src/closest_points/: closest_grid.cpp  closest_grid_server.cpp  closest_point_visualizer.cpp  cloud_bounds_server.cpp
src/filters/: crop_box_filter.cpp  crop_box_filter_node.cpp  local_map_filter.cpp  local_map_filter_node.cpp
src/surface_normals/: surface_normal_server.cpp  surface_normal_visualizer.cpp
srv/: GetCanopyDensityGrid.srv  GetClosestGrid.srv  GetCloudBounds.srv  GetGlobalNormal.srv
